# ofxGgmlAudio

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
.github/workflows/: addon-hygiene.yml
docs/: ARCHITECTURE.md  AUDIO_WORKFLOWS.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md
docs/releases/: v1.0.1.md
ofxGgmlAudioTranscribeExample/: README.md  addons.make
ofxGgmlAudioTranscribeExample/src/: ofApp.cpp  ofApp.h
ofxGgmlAudioWhisperExample/: README.md  addons.make
ofxGgmlAudioWhisperExample/src/: ofApp.cpp  ofApp.h
ofxGgmlSpeechTranscribeExample/: README.md  addons.make
ofxGgmlSpeechTranscribeExample/src/: ofApp.cpp  ofApp.h
scripts/: build-transcribe-example.bat  build-transcribe-example.ps1  build-transcribe-example.sh  build-whisper-example.bat  build-whisper-example.ps1  build-whisper-example.sh  build-whisper.bat  build-whisper.ps1  build-whisper.sh  clean-transcribe-example.bat  clean-transcribe-example.ps1  clean-transcribe-example.sh  doctor-audio.bat  doctor-audio.ps1  doctor-audio.sh  download-whisper-assets.bat  download-whisper-assets.ps1  download-whisper-assets.sh  quickstart-transcribe-example.bat  quickstart-transcribe-example.ps1  quickstart-transcribe-example.sh  release-candidate.ps1  run-audio-runtime-smoke.bat  run-audio-runtime-smoke.ps1  run-audio-runtime-smoke.sh  run-transcribe-example.bat  run-transcribe-example.ps1  run-transcribe-example.sh  run-whisper-example.bat  run-whisper-example.ps1  run-whisper-example.sh  setup-whisper.bat  setup-whisper.ps1  setup-whisper.sh  test-addon.ps1  test-audio-runtime-smoke.ps1  test-clean-transcribe-example.bat  test-clean-transcribe-example.ps1  test-clean-transcribe-example.sh  test-doctor-audio.bat  (+21 more)
src/: ofxGgmlAudio.h  ofxGgmlAudioVersion.h  ofxGgmlSpeech.h
src/ofxGgmlAudio/: ofxGgmlAudioFeatures.cpp  ofxGgmlAudioFeatures.h  ofxGgmlAudioRollingTranscript.cpp  ofxGgmlAudioRollingTranscript.h  ofxGgmlAudioStreamChunker.cpp  ofxGgmlAudioStreamChunker.h  ofxGgmlAudioTypes.h  ofxGgmlAudioUtils.cpp  ofxGgmlAudioUtils.h  ofxGgmlAudioWhisperBackend.cpp  ofxGgmlAudioWhisperBackend.h
src/ofxGgmlSpeech/: ofxGgmlSpeechTypes.h  ofxGgmlSpeechUtils.cpp  ofxGgmlSpeechUtils.h  ofxGgmlSpeechWhisperBackend.cpp  ofxGgmlSpeechWhisperBackend.h
tests/: CMakeLists.txt  test_main.cpp  test_whisper_chunked_smoke.cpp  test_whisper_smoke.cpp
